# SnakeGame

./: .gitignore  BaseScreen.h  CMakeLists.txt  Color.h  ConsoleCellData.h  ConsoleCellItem.cpp  ConsoleCellItem.h  ConsoleInfo.cpp  ConsoleInfo.h  ConsoleLevel.cpp  ConsoleLevel.h  ConsoleSnakeGame.cpp  ConsoleSnakeGame.h  ConsoleUtil.cpp  ConsoleUtil.h  GameMode.h  InformationWindow.cpp  InformationWindow.h  LogoDisplayer.cpp  LogoDisplayer.h  LoopManager.cpp  LoopManager.h  Menu.cpp  Menu.h  MenuContent.h  MidiPlayer.cpp  MidiPlayer.h  MovableItem.cpp  MovableItem.h  MusicRawData.cpp  MusicRawData.h  Player.cpp  Player.h  PlayerData.h  Readme.md  Snake.cpp  Snake.h  SnakeGame.sln  SnakeGame.vcxproj  SnakeGame.vcxproj.filters  (+7 more)
Docs/: Doxyfile
Docs/html/: _color_8h.html  _color_8h.js  _color_8h_source.html  _console_cell_data_8h.html  _console_cell_data_8h.js  _console_cell_data_8h_source.html  _console_cell_item_8cpp_source.html  _console_cell_item_8h.html  _console_cell_item_8h_source.html  _console_level_8cpp_source.html  _console_level_8h.html  _console_level_8h.js  _console_level_8h_source.html  _console_snake_game_8cpp_source.html  _console_snake_game_8h.html  _console_snake_game_8h_source.html  _console_util_8cpp_source.html  _console_util_8h.html  _console_util_8h.js  _console_util_8h_source.html  _game_mode_8h.html  _game_mode_8h.js  _game_mode_8h_source.html  _information_window_8cpp_source.html  _information_window_8h.html  _information_window_8h_source.html  _logo_displayer_8cpp_source.html  _logo_displayer_8h.html  _logo_displayer_8h_source.html  (+116 more)
(+61 files in other folders)
